# nonebot-plugin-xisoul

./: LICENSE  README.md  __init__.py  date_parser.py  huangli_formatter.py  huangli_scraper.py  lunar_calendar_by_date.py  lunar_image.py  lunar_news.py  lunar_text.py  ollama_chat.py  pyproject.toml  random_images.py
