[project]
name = "nonebot-plugin-xisoul"  # 更新为连字符版本
description = "NoneBot 插件：提供农历黄历信息和新闻图片功能"
version = "0.1.0"
authors = [
  {
    name = "xisoul",
    email = "xisoul@qq.com"
  },
]
license = { text = "MIT" }
readme = "README.md"
homepage = "https://github.com/xisoul/nonebot-plugin-xisoul"  # 更新为连字符版本
repository = "https://github.com/xisoul/nonebot-plugin-xisoul"  # 更新为连字符版本
keywords = [
  "nonebot2",
  "nonebot",
  "plugin",
  "lunar",
  "calendar",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: NoneBot",
]
requires-python = ">=3.8,<4.0"
dependencies = [
  "nonebot2>=2.0.0",
  "nonebot-adapter-onebot>=2.3.0",
  "nonebot-plugin-apscheduler>=0.1.2",
  "httpx>=0.23.0",
]

[tool.nonebot]
plugin = true